[tool.poetry]
name = "page-analyzer"
version = "0.1.0"
description = ""
authors = ["Timur <tim.vildanov@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
