[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "3 учебный проект в школе Hexlet"
authors = ["Timur <tim.vildanov@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.1"
gunicorn = "^21.2.0"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
